[build-system]
requires = ["hatchling >= 1.26.1"]
build-backend = "hatchling.build"

[project]
name = "pypjsekai"
description = "Reverse engineered Python client for the mobile rhythm game Project SEKAI COLORFUL STAGE! feat. Hatsune Miku"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Erik Chan", email = "erikchan002@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aenum==3.1.16",
  "msgpack==1.0.8",
  "pycryptodome==3.20.0",
  "pydantic==2.7.0",
  "PyJWT==2.8.0",
  "requests==2.32.3",
]
dynamic = ["version"]

[project.optional-dependencies]
assetbundle = [
  "UnityPy==1.20.10",
  "WannaCRI==0.3.0",
  "python-json-logger~=2.0.2",
  "ffmpeg-python==0.2.0",
]
appinfo = [
  "UnityPy==1.20.10",
]

[project.urls]
Documentation = "https://github.com/pjsek-ai/pypjsekai#readme"
Issues = "https://github.com/pjsek-ai/pypjsekai/issues"
Source = "https://github.com/pjsek-ai/pypjsekai"

[tool.hatch.build]
packages = ["src/pjsekai"]

[tool.hatch.version]
path = "src/pjsekai/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "msgpack-types==0.2.0",
  "pytest",
  "pytest-cov",
  "types-requests==2.32.0.20241016", 
]
require-runtime-dependecies = true
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/pjsekai --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.hatch.envs.minimum]
python = "3.9"

[[tool.hatch.envs.test.matrix]]
python = ["3.13", "3.12", "3.11", "3.10", "3.9"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/pjsekai/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
